# ngw_kadastr

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  deploy.sh  docker-compose.yml  pyproject.toml  supervisord.conf
app/: db.py  main.py  models.py  ng_toolbox.py  uploader.py  worker.py
app/static/: index.css  index.js
app/static/js/: icons.js  interface.js  panel.js  table.js  uploader.js
app/templates/: index.html
share/: .env.example  docker-compose.yml  install.sh
